2010-12-03  Thomas Koenig  <tkoenig@gcc.gnu.org>

PR fortran/44352
	* dump-parse-tree.c (show_symbol):  Don't show formal namespace
	for statement functions in order to avoid infinite recursion.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167416 138bc75d-0d04-0410-961f-82ee72b054a4